2023/2/10 提交了数组的排序扩容

--- a/README
+++ b/README
@@ -5,3 +5,4 @@
 ##2023/2/7 提交了第三天的学习作业（数组）
 ##2023/2/8 提交了第四天的学习作业（数组的拷贝；翻转；扩容；缩减）
 ###2023/2/9提交了第五天的学习作业（排序与查找以及二维数组相关内容）
+###2023/2/10 提交了第六天的学习作业（数组应用的家庭作业）
